# iiwa_grasping

./: .gitignore  README.md  grasp_object_original.py
src/: .rosinstall.bak
src/contact_graspnet/: .gitignore  CMakeLists.txt  README.md  cgp_env_last.yml  package.xml
src/contact_graspnet/contact_graspnet/: contact_grasp_estimator.py  inference.py  my_node.py  my_node.py.backup  ros_node.py  visualization_utils.py
src/contact_graspnet/launch/: grasp_planner.launch
src/contact_graspnet/msg/: ContactGrasp.msg
src/contact_graspnet/srv/: ContactGraspNetAnswer.srv
src/gpd_ros/: CMakeLists.txt
src/gpd_ros/include/gpd_ros/: grasp_detection_node.h  grasp_detection_server.h  grasp_messages.h
src/gpd_ros/launch/: ur5.launch
src/gpd_ros/msg/: CloudSamples.msg  GraspConfigGeomPose.msg  GraspConfigListPose.msg
src/gpd_ros/src/gpd_ros/: grasp_detection_node.cpp  grasp_detection_server.cpp  grasp_messages.cpp
src/gpd_ros/srv/: detect_grasps_poses.srv
src/iiwa_stack/iiwa_control/config/: iiwa_control.yaml
src/iiwa_stack/iiwa_description/launch/: iiwa14_upload.launch
src/iiwa_stack/iiwa_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  iiwa.gazebo.xacro  iiwa14.xacro
src/iiwa_stack/iiwa_gazebo/launch/: depth_point_cloud.launch  iiwa_gazebo.launch  iiwa_world.launch  rosbag.launch
src/iiwa_stack/iiwa_manipulation/: CMakeLists.txt  package.xml
src/iiwa_stack/iiwa_manipulation/launch/: ns_launch.launch
src/iiwa_stack/iiwa_manipulation/scripts/: grasp_object.py
src/realsense_gazebo_plugin/src/: gazebo_ros_realsense.cpp
(+40 files in other folders)
